--- a/lesson_08/index.html
+++ b/lesson_08/index.html
@@ -19,13 +19,13 @@
           <div>
             <a href="#">
               <!-- png у логотипів важив менше ніж avif & webp, взяв стиснені png -->
-              <img src="img/logo_white.png" alt="logo">
+              <img src="img/logo_white-x2.png" alt="logo">
             </a>
             <p class="logo-01-text"> — Контентне зображення, растрове, png</p>
           </div>
           <div>
             <a href="#">
-              <img src="img/logo_blue.png" alt="logo">
+              <img src="img/logo_blue-x2.png" alt="logo">
             </a>
             <p class="logo-02-text"> — Контентне зображення, растрове, png</p>
           </div>
@@ -101,7 +101,8 @@
         <div class="content_images">
           <div>
             <picture>
-              <source srcset="img/content_01-x2.avif 2x, img/content_01-x3.avif 3x" type="image/avif">
+              <source srcset="img/content_01.avif 1x, img/content_01-x2.avif 2x, img/content_01-x3.avif 3x"
+                type="image/avif">
               <img src="img/content_01.avif"
                 alt="A man with a backpack looking at a globe, representing his excitement for traveling around the world.">
             </picture>
@@ -109,7 +110,8 @@
           </div>
           <div>
             <picture>
-              <source srcset="img/content_02-x2.avif 2x, img/content_02-x3.avif 3x" type="image/avif">
+              <source srcset="img/content_02.avif 1x, img/content_02-x2.avif 2x, img/content_02-x3.avif 3x"
+                type="image/avif">
               <img src="img/content_02.avif"
                 alt="Woman in a red dress walking towards the entrance gate of a temple, surrounded by lush greenery.">
             </picture>
@@ -117,7 +119,8 @@
           </div>
           <div>
             <picture>
-              <source srcset="img/content_03-x2.avif 2x, img/content_03-x3.avif 3x" type="image/avif">
+              <source srcset="img/content_03.avif 1x, img/content_03-x2.avif 2x, img/content_03-x3.avif 3x"
+                type="image/avif">
               <img src="img/content_03.avif"
                 alt="A cityscape showcasing a historic castle rising in the background, surrounded by modern buildings and greenery.">
             </picture>
@@ -125,7 +128,8 @@
           </div>
           <div>
             <picture>
-              <source srcset="img/content_04-x2.avif 2x, img/content_04-x3.avif 3x" type="image/avif">
+              <source srcset="img/content_04.avif 1x, img/content_04-x2.avif 2x, img/content_04-x3.avif 3x"
+                type="image/avif">
               <img src="img/content_04.avif"
                 alt="The Eiffel Tower rises majestically against a bright sky, highlighting its elegant architecture and Parisian charm.">
             </picture>
@@ -133,7 +137,8 @@
           </div>
           <div>
             <picture>
-              <source srcset="img/content_05-x2.avif 2x, img/content_05-x3.avif 3x" type="image/avif">
+              <source srcset="img/content_05.avif 1x, img/content_05-x2.avif 2x, img/content_05-x3.avif 3x"
+                type="image/avif">
               <img src="img/content_05.avif"
                 alt="A stunning sunset view of Dubai's skyline, highlighting its modern architecture against a colorful sky.">
             </picture>
