home-page_link-changes

--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>HomeWork_06</title>
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <header class="header">
-        <div><a href="/index.html" class="back-link">На головну</a></div>
-      </header>
-      <main class="page">
-        <div class="container">
-          
-        </div>
-      </main>
-      <footer class="footer"></footer>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>HomeWork_015</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div><a href="https://riimm7.github.io/HomeWork/index.html" class="back-link">На головну</a></div>
+    </header>
+    <main class="page">
+      <div class="container">
+
+      </div>
+    </main>
+    <footer class="footer"></footer>
+  </div>
+</body>
+
 </html>
