--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
       <li><a href="lesson_13/index.html">Урок 13</a></li>
       <li><a href="lesson_14/index.html">Урок 14</a></li>
       <li><a href="lesson_15/index.html">Урок 15</a></li>
+      <li><a href="lesson_16/index.html">Урок 16</a></li>
+      <li><a href="lesson_17/index.html">Урок 17</a></li>
     </ul>
   </div>
 </body>
