--- a/lesson_06/index.html
+++ b/lesson_06/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      <div><a href="/index.html" class="back-link">На головну</a></div>
+      <div><a href="https://riimm7.github.io/HomeWork/index.html" class="back-link">На головну</a></div>
     </header>
     <main class="page">
       <div class="container">
