--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       background-color: #ffffff;
       border-radius: 12px;
       padding: 40px;
+      padding-top: 100px;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
       width: 80%;
       max-width: 600px;
