--- a/Source/lesson_10/index.html
+++ b/Source/lesson_10/index.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <!-- Коди мов https://html-css.co.ua/html/lang-kodu-mov/ -->
 <html lang="en">
-	<head>
-		<!-- Кодування тексту -->
-		<meta charset="UTF-8">
-		<!-- Налаштування в'юпорту (адаптиву, масштабу тощо) -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- Підключення окремого файлу стилів -->
-		<link rel="stylesheet" href="css/style.css">
-		<!-- Заголовок сторінки в браузері -->
-		<title>Lesson 10</title>
-	</head>
-	<body>
-		<div class="wrapper">
-			<header class="header">
-				<div class="header__container">
-					<ul class="menu">
-						<li class="menu__item">
-							<a href="#" class="menu__link">Home</a>
-						</li>
-						<li class="menu__item">
-							<a href="#" class="menu__link">About</a>
-						</li>
-						<li class="menu__item">
-							<a href="#" class="menu__link">Team</a>
-							<ul class="menu__sub-menu sub-menu">
-								<li class="sub-menu__item">
-									<a href="#" class="sub-menu__link">CEO</a>
-								</li>
-								<li class="sub-menu__item">
-									<a href="#" class="sub-menu__link">Support</a>
-								</li>
-								<li class="sub-menu__item">
-									<a href="#" class="sub-menu__link">Frontend</a>
-								</li>
-								<li class="sub-menu__item">
-									<a href="#" class="sub-menu__link">Backend</a>
-								</li>
-							</ul>
-						</li>
-						<li class="menu__item">
-							<a href="#" class="menu__link">Contacts</a>
-						</li>
-					</ul>
-				</div>
-			</header>
-			<main class="page">
-				<div class="page__container">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque optio molestias ex consequatur et, laborum exercitationem dolor suscipit. Natus cumque cum minus? Numquam alias excepturi unde provident accusantium accusamus quo.
-					<!-- 
-					<div class="blocks blocks--margin">
-						<div class="blocks__item blocks__item--brown">1</div>
-						<div class="blocks__text">
+
+<head>
+	<!-- Кодування тексту -->
+	<meta charset="UTF-8">
+	<!-- Налаштування в'юпорту (адаптиву, масштабу тощо) -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Підключення окремого файлу стилів -->
+	<link rel="stylesheet" href="css/style.css">
+	<!-- Заголовок сторінки в браузері -->
+	<title>Lesson 10</title>
+</head>
+
+<body>
+	<div class="wrapper">
+		<header class="header">
+			<div class="header__container">
+				<ul class="menu">
+					<li class="menu__item">
+						<a href="#" class="menu__link">Home</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">About</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">Team</a>
+						<ul class="menu__sub-menu sub-menu">
+							<li class="sub-menu__item">
+								<a href="#" class="sub-menu__link">CEO</a>
+							</li>
+							<li class="sub-menu__item">
+								<a href="#" class="sub-menu__link">Support</a>
+							</li>
+							<li class="sub-menu__item">
+								<a href="#" class="sub-menu__link">Frontend</a>
+							</li>
+							<li class="sub-menu__item">
+								<a href="#" class="sub-menu__link">Backend</a>
+							</li>
+						</ul>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">Contacts</a>
+					</li>
+				</ul>
+			</div>
+		</header>
+		<main class="page">
+			<div class="page__container">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque optio molestias ex consequatur et, laborum
+				exercitationem dolor suscipit. Natus cumque cum minus? Numquam alias excepturi unde provident accusantium
+				accusamus quo.
+				<!-- 
+					<div class="propertys propertys--margin">
+						<div class="propertys__item propertys__item--brown">1</div>
+						<div class="propertys__text">
 							<p>
 								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil ex distinctio quam adipisci voluptate veniam quas inventore est similique temporibus praesentium amet ad, labore deleniti, provident saepe id, eum quaerat!
 								Quas rerum quis odit assumenda consequatur accusantium facere impedit reprehenderit. Eligendi nesciunt, perferendis cum provident molestias quod necessitatibus numquam similique in incidunt minus ad illum magni ipsum, dolor ea temporibus!
@@ -75,8 +79,8 @@
 								Expedita placeat deleniti aut quos mollitia animi non. Eius itaque cupiditate quia laudantium beatae cum quo natus vero ullam iure ducimus dolor, aperiam rem in voluptates, dignissimos, a ipsa consequatur!
 							</p>
 						</div>
-						<div class="blocks__item blocks__item--puprule">2</div>
-						<div class="blocks__text">
+						<div class="propertys__item propertys__item--puprule">2</div>
+						<div class="propertys__text">
 							<p>
 								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil ex distinctio quam adipisci voluptate veniam quas inventore est similique temporibus praesentium amet ad, labore deleniti, provident saepe id, eum quaerat!
 								Quas rerum quis odit assumenda consequatur accusantium facere impedit reprehenderit. Eligendi nesciunt, perferendis cum provident molestias quod necessitatibus numquam similique in incidunt minus ad illum magni ipsum, dolor ea temporibus!
@@ -100,8 +104,8 @@
 								Expedita placeat deleniti aut quos mollitia animi non. Eius itaque cupiditate quia laudantium beatae cum quo natus vero ullam iure ducimus dolor, aperiam rem in voluptates, dignissimos, a ipsa consequatur!
 							</p>
 						</div>
-						<div class="blocks__item blocks__item--green">3</div>
-						<div class="blocks__text">
+						<div class="propertys__item propertys__item--green">3</div>
+						<div class="propertys__text">
 							<p>
 								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil ex distinctio quam adipisci voluptate veniam quas inventore est similique temporibus praesentium amet ad, labore deleniti, provident saepe id, eum quaerat!
 								Quas rerum quis odit assumenda consequatur accusantium facere impedit reprehenderit. Eligendi nesciunt, perferendis cum provident molestias quod necessitatibus numquam similique in incidunt minus ad illum magni ipsum, dolor ea temporibus!
@@ -128,8 +132,8 @@
 					</div>
 					 -->
 
-					<!-- z-index та батьківськи елементи -->
-					<!-- <div class="section-1">
+				<!-- z-index та батьківськи елементи -->
+				<!-- <div class="section-1">
 						<div class="section-1__item"> section 1</div>
 					</div>
 					<div class="section-2">
@@ -139,18 +143,19 @@
 						...
 					</div> -->
 
-					<!-- Приклад з псевдоелементом -->
-					<!-- <ul class="list">
+				<!-- Приклад з псевдоелементом -->
+				<!-- <ul class="list">
 						<li class="list__item">Lorem ipsum dolor sit amet.</li>
 						<li class="list__item">Lorem ipsum dolor sit amet consectetur.</li>
 						<li class="list__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, repudiandae.</li>
 						<li class="list__item">Lorem ipsum dolor sit.</l>
 					</ul> -->
 
-				</div>
-			</main>
-			<footer class="footer">
-			</footer>
-		</div>
-	</body>
+			</div>
+		</main>
+		<footer class="footer">
+		</footer>
+	</div>
+</body>
+
 </html>
