--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       /* Зелений відтінок */
       font-size: 20px;
       transition: color 0.3s ease, transform 0.3s ease;
-      display: inline-block;
+      display: inline-property;
       padding: 10px 20px;
       border-radius: 5px;
       background-color: #f7f7f7;
@@ -69,7 +69,7 @@
     }
 
     .back-link {
-      display: inline-block;
+      display: inline-property;
       margin-top: 30px;
       padding: 12px 25px;
       background-color: #4caf50;
