--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -15,7 +15,79 @@
     </header>
     <main class="page">
       <div class="container">
+        <div class="first-task">
+          <div class="title">Translate(x, y)</div>
+          <div class="property">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--translate"></div>
+          </div>
 
+          <div class="title">Scale(x, y)</div>
+          <div class="property">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--scale"></div>
+          </div>
+
+          <div class="title">Rotate(deg)</div>
+          <div class="property">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--rotate"></div>
+          </div>
+
+          <div class="title">Skew(x, y)</div>
+          <div class="property">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--skew"></div>
+          </div>
+
+          <div class="title">Matrix(a, c, b, d, x, y)</div>
+          <div class="property">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--matrix"></div>
+          </div>
+
+          <div class="title">Transform-origin (bottom right)</div>
+          <div class="property">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--origin"></div>
+          </div>
+
+          <div class="title">Perspective + RotateX</div>
+          <div class="property property--perspective">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--perspective"></div>
+          </div>
+
+          <div class="title">Translate3d(x, y, z)</div>
+          <div class="property">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--translate3d"></div>
+          </div>
+
+          <div class="title">Scale3d(x, y, z)</div>
+          <div class="property">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--scale3d"></div>
+          </div>
+
+          <div class="title">Rotate3d(x, y, z, deg)</div>
+          <div class="property">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--rotate3d"></div>
+          </div>
+
+          <div class="title">Matrix3d(...)</div>
+          <div class="property">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--matrix3d"></div>
+          </div>
+
+          <div class="title">Backface-visibility</div>
+          <div class="property property--backface">
+            <div class="property__base"></div>
+            <div class="property__hover property__hover--backface"></div>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="footer"></footer>
