--- a/Source/lesson_07/index.html
+++ b/Source/lesson_07/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <!-- Коди мов https://html-css.co.ua/html/lang-kodu-mov/ -->
 <html lang="en">
-	<head>
-		<!-- Кодування тексту -->
-		<meta charset="UTF-8">
-		<!-- Налаштування в'юпорту (адаптиву, масштабу тощо) -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- Підключення окремого файлу стилів -->
-		<link rel="stylesheet" href="css/style.css">
-		<!-- Заголовок сторінки в браузері -->
-		<title>Lesson 07</title>
-	</head>
-	<body>
-		<div class="wrapper">
-			<header class="header"></header>
-			<main class="page">
-				<div class="container">
-					<!-- 
+
+<head>
+	<!-- Кодування тексту -->
+	<meta charset="UTF-8">
+	<!-- Налаштування в'юпорту (адаптиву, масштабу тощо) -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Підключення окремого файлу стилів -->
+	<link rel="stylesheet" href="css/style.css">
+	<!-- Заголовок сторінки в браузері -->
+	<title>Lesson 07</title>
+</head>
+
+<body>
+	<div class="wrapper">
+		<header class="header"></header>
+		<main class="page">
+			<div class="container">
+				<!-- 
 					<a href="#some-id" class="link">
 						<span>Some link</span>
 					</a>
-					<div class="block">
-						<div id="some-id" class="block__inner">
+					<div class="property">
+						<div id="some-id" class="property__inner">
 
 						</div>
 					</div>
 					 -->
 
-					<!-- <input class="input" type="text"> -->
+				<!-- <input class="input" type="text"> -->
 
-					<!-- 
+				<!-- 
 					<div class="text">
 						<p>
 							1 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -48,8 +50,8 @@
 						</p>
 					</div>
 					 -->
-					<!-- 
-					<div class="some-block">
+				<!-- 
+					<div class="some-property">
 						<h1>Title</h1>
 						<img src="img/honey.jpg" alt="Image">
 						<div>
@@ -64,9 +66,9 @@
 					</div>
 					 -->
 
-					<!-- <span class="span">TEXT</span> -->
+				<!-- <span class="span">TEXT</span> -->
 
-					<!-- 
+				<!-- 
 					<ul class="list">
 						<li class="list__item">
 							<a href="#" class="list__link">Some Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quasi rem mollitia sapiente unde molestias atque magnam sint. Ab expedita iusto temporibus omnis suscipit? Est, accusamus dolore. Animi, excepturi voluptas?</a>
@@ -83,17 +85,18 @@
 					</ul>
 					 -->
 
-					<!-- 
+				<!-- 
 					<a href="#" class="link-image">
 						<img src="img/honey.jpg" alt="Image">
 					</a>
 					 -->
 
-					<!-- <h1 class="title">Some</h1> -->
+				<!-- <h1 class="title">Some</h1> -->
 
-				</div>
-			</main>
-			<footer class="footer"></footer>
-		</div>
-	</body>
+			</div>
+		</main>
+		<footer class="footer"></footer>
+	</div>
+</body>
+
 </html>
