--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -58,17 +58,17 @@
         </section>
         <section class="game">
           <h2>Гра "Win this game"</h2>
-          <div class="block_0">Start</div>
-          <div class="block-1"></div>
-          <div class="block-2"></div>
-          <div class="block-3"></div>
-          <div class="block-4"></div>
-          <div class="block-5"></div>
-          <div class="block-6"></div>
-          <div class="block-7"></div>
-          <div class="block-8"></div>
-          <div class="block-9"></div>
-          <div class="block_10">Finish</div>
+          <div class="property_0">Start</div>
+          <div class="property-1"></div>
+          <div class="property-2"></div>
+          <div class="property-3"></div>
+          <div class="property-4"></div>
+          <div class="property-5"></div>
+          <div class="property-6"></div>
+          <div class="property-7"></div>
+          <div class="property-8"></div>
+          <div class="property-9"></div>
+          <div class="property_10">Finish</div>
         </section>
       </div>
     </main>
