hw_11_second-task

--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -88,6 +88,155 @@
             <div class="property__hover property__hover--backface"></div>
           </div>
         </div>
+        <div class="second-task">
+          <div class="sky">
+            <div class="sky__sun"></div>
+            <div class="sky__cloud cloud">
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+            </div>
+            <div class="sky__cloud cloud">
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+            </div>
+            <div class="sky__cloud cloud">
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+            </div>
+            <div class="sky__cloud cloud">
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+              <div class="cloud__item"></div>
+            </div>
+          </div>
+          <div class="landscape">
+            <div class="plants">
+              <div class="tumbleweed">
+                <img src="img/tubleweed.png" alt="Tumbleweed">
+              </div>
+
+              <div class="cactus cactus--left">
+                <div class="cactus__big">
+                  <img src="img/cactus.png" alt="Big cactus">
+                </div>
+                <div class="cactus__small">
+                  <img src="img/cactus.png" alt="Small cactus">
+                </div>
+              </div>
+
+              <div class="cactus cactus--mid">
+                <div class="cactus__small">
+                  <img src="img/cactus.png" alt="Small cactus">
+                </div>
+              </div>
+
+              <div class="cactus cactus--right">
+                <div class="cactus__big">
+                  <img src="img/cactus.png" alt="Big cactus">
+                </div>
+              </div>
+            </div>
+
+            <div class="rocks">
+              <div class="rock-group rock-group--middle">
+                <div class="rock rock--large"></div>
+                <div class="rock rock--mid"></div>
+                <div class="rock rock--small"></div>
+              </div>
+
+              <div class="rock-group rock-group--left">
+                <div class="rock rock--mid"></div>
+                <div class="rock rock--small"></div>
+              </div>
+
+              <div class="rock-group rock-group--right">
+                <div class="rock rock--mid"></div>
+                <div class="rock rock--small"></div>
+              </div>
+            </div>
+          </div>
+          <div class="highway">
+            <div class="highway__markup"></div>
+            <div class="highway__markup"></div>
+            <div class="highway__markup"></div>
+            <div class="highway__markup"></div>
+            <div class="highway__markup"></div>
+            <div class="highway__markup"></div>
+          </div>
+          <div class="car">
+            <div class="car__body"></div>
+            <div class="car__body--bottom"></div>
+            <div class="car__hood"></div>
+            <div class="car__fender car__fender--front">
+              <div class="car__fender--bottom"></div>
+            </div>
+            <div class="car__fender car__fender--rear">
+              <div class="car__fender--bottom"></div>
+            </div>
+            <div class="car__windshield windshield">
+              <div class="windshield__body"></div>
+            </div>
+            <div class="car__rear-window"></div>
+            <div class="car__window car__rear-window"></div>
+            <div class="car__door"></div>
+            <div class="car__door-handle door-handle">
+              <div class="door-handle__body"></div>
+              <div class="door-handle__inner"></div>
+            </div>
+            <div class="car__window window-car">
+              <div class="window-car__body"></div>
+              <div class="window-car__bottom"></div>
+              <div class="window-car__pillar"></div>
+            </div>
+            <div class="car__side-mirror"></div>
+            <div class="car__headlight headlight">
+              <div class="headlight__top"></div>
+              <div class="headlight__bottom"></div>
+              <div class="headlight__door"></div>
+            </div>
+            <div class="car__wheel car__wheel--front wheel">
+              <div class="wheel__body"></div>
+              <div class="wheel__rim"></div>
+              <div class="wheel__rim-inner"></div>
+              <div class="wheel__hubcap">
+                <svg width="60" height="68" viewBox="0 0 60 68" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M22.5628 5.76615C25.2326 -0.97057 34.7674 -0.970573 37.4372 5.76615L38.7105 8.97883C40.0783 12.4302 43.6408 14.4871 47.3137 13.9459L50.7326 13.4422C57.9017 12.386 62.6691 20.6434 58.1699 26.3239L56.0242 29.0329C53.7191 31.9432 53.7191 36.0568 56.0242 38.9671L58.1698 41.6761C62.6691 47.3566 57.9017 55.614 50.7326 54.5578L47.3137 54.0541C43.6408 53.5129 40.0783 55.5698 38.7105 59.0212L37.4372 62.2339C34.7674 68.9706 25.2326 68.9706 22.5628 62.2339L21.2895 59.0212C19.9217 55.5698 16.3592 53.5129 12.6863 54.0541L9.26738 54.5578C2.0983 55.614 -2.66911 47.3566 1.83014 41.6761L3.9758 38.9671C6.28087 36.0568 6.28088 31.9432 3.9758 29.0329L1.83015 26.3239C-2.6691 20.6434 2.09829 12.386 9.26738 13.4422L12.6863 13.9459C16.3592 14.4871 19.9217 12.4302 21.2895 8.97883L22.5628 5.76615Z"
+                    fill="#A3A4A9" />
+                </svg>
+              </div>
+              <div class="wheel__axle"></div>
+            </div>
+            <div class="car__wheel car__wheel--rear wheel">
+              <div class="wheel__body"></div>
+              <div class="wheel__rim"></div>
+              <div class="wheel__rim-inner"></div>
+              <div class="wheel__hubcap">
+                <svg width="60" height="68" viewBox="0 0 60 68" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M22.5628 5.76615C25.2326 -0.97057 34.7674 -0.970573 37.4372 5.76615L38.7105 8.97883C40.0783 12.4302 43.6408 14.4871 47.3137 13.9459L50.7326 13.4422C57.9017 12.386 62.6691 20.6434 58.1699 26.3239L56.0242 29.0329C53.7191 31.9432 53.7191 36.0568 56.0242 38.9671L58.1698 41.6761C62.6691 47.3566 57.9017 55.614 50.7326 54.5578L47.3137 54.0541C43.6408 53.5129 40.0783 55.5698 38.7105 59.0212L37.4372 62.2339C34.7674 68.9706 25.2326 68.9706 22.5628 62.2339L21.2895 59.0212C19.9217 55.5698 16.3592 53.5129 12.6863 54.0541L9.26738 54.5578C2.0983 55.614 -2.66911 47.3566 1.83014 41.6761L3.9758 38.9671C6.28087 36.0568 6.28088 31.9432 3.9758 29.0329L1.83015 26.3239C-2.6691 20.6434 2.09829 12.386 9.26738 13.4422L12.6863 13.9459C16.3592 14.4871 19.9217 12.4302 21.2895 8.97883L22.5628 5.76615Z"
+                    fill="#A3A4A9" />
+                </svg>
+              </div>
+              <div class="wheel__axle"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="footer"></footer>
