hw_11_bem-changes

--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -180,13 +180,13 @@
           </div>
           <div class="car">
             <div class="car__body"></div>
-            <div class="car__body--bottom"></div>
+            <div class="car__body-bottom"></div>
             <div class="car__hood"></div>
-            <div class="car__fender car__fender--front">
-              <div class="car__fender--bottom"></div>
+            <div class="car__fender car__fender--front fender">
+              <div class="fender__bottom"></div>
             </div>
-            <div class="car__fender car__fender--rear">
-              <div class="car__fender--bottom"></div>
+            <div class="car__fender car__fender--rear fender">
+              <div class="fender__bottom"></div>
             </div>
             <div class="car__windshield windshield">
               <div class="windshield__body"></div>
