hw_12_bem-change

--- a/lesson_12/index.html
+++ b/lesson_12/index.html
@@ -175,7 +175,7 @@
             </div>
           </div>
           <div class="highway">
-            <div class="highway__markup--hidden"></div>
+            <div class="highway__markup highway__markup--hidden"></div>
             <div class="highway__markup"></div>
             <div class="highway__markup"></div>
             <div class="highway__markup"></div>
