--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -15,7 +15,107 @@
     </header>
     <main class="page">
       <div class="container">
-
+        <div class="teachers">
+          <div class="teachers__container">
+            <h2 class="teachers__title title">Meet our <br><span>Professional Faculty</span></h2>
+            <div class="teachers__cards">
+              <div class="teachers__card card">
+                <div class="card__img">
+                  <img src="img/teacher_01.avif" alt="teacher photo">
+                </div>
+                <div class="card__title">Albert Flores</div>
+                <p class="card__info">Founder of FeatherDev Academy
+                  Masters in Finance | University of New York </p>
+                <a href="#" class="card__link">Read more</a>
+              </div>
+              <div class="teachers__card card">
+                <div class="card__img">
+                  <img src="img/teacher_02.avif" alt="teacher photo">
+                </div>
+                <div class="card__title">Arlene McCoy</div>
+                <p class="card__info">15 Year + Experience in Teaching and Former RBI Grade B Employee. Have Qualified
+                  USMLE Mains twice and is just like a knowledge book of Economics.</p>
+                <a href="#" class="card__link">Read more</a>
+              </div>
+              <div class="teachers__card card">
+                <div class="card__img">
+                  <img src="img/teacher_03.avif" alt="teacher photo">
+                </div>
+                <div class="card__title">Annette Black</div>
+                <p class="card__info">10 Year + Experience in Teaching and Former Civil Servant. Specialized in teaching
+                  History and no student wants to miss their class.</p>
+                <a href="#" class="card__link">Read more</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="promo">
+          <div class="promo__container">
+            <div class="promo__content">
+              <h2 class="promo__title title">Best Faculty from New York is <br><span>Now Available in California!</span>
+              </h2>
+              <p class="promo__text">Our Faculty is common in all the branches which helps us to maintain the quality
+                education across India. Now there is no need to go anywhere!</p>
+              <div class="promo__list">
+                <p>Learn from Top Educators in your city</p>
+                <p>Regular Classes & Doubt Solving</p>
+                <p>300+ Selections in 2022-2023 Batch</p>
+              </div>
+            </div>
+            <div class="promo__img">
+              <picture>
+                <source srcset="img/faculty-slider_01.webp 1x, img/faculty-slider_01-x2.webp 2x" type="image/webp">
+                <source srcset="img/img/faculty-slider_01-x3.avif" type="image/avif" media="(min-resolution: 3dppx)">
+                <img src="img/faculty-slider_01.webp"
+                  alt="A teacher sitting on a couch, focused on her laptop while working or preparing lessons">
+              </picture>
+            </div>
+          </div>
+        </div>
+        <div class="feature">
+          <div class="feature__container">
+            <h3 class="feature__title">FeatherDev Academy is the <span>Best USMLE/Civil Services Coaching in
+                California</span></h3>
+            <div class="feature__row row">
+              <div class="row__item item">
+                <div class="item__icon">
+                  <img src="img/feature-icon_01.png" alt="icon">
+                </div>
+                <div class="item__text">
+                  <div class="item__title">2000+</div>
+                  <div class="item__subtitle">Selection</div>
+                </div>
+              </div>
+              <div class="row__item item">
+                <div class="item__icon">
+                  <img src="img/feature-icon_02.png" alt="icon">
+                </div>
+                <div class="item__text">
+                  <div class="item__title">10 Years +</div>
+                  <div class="item__subtitle">Experience faculty</div>
+                </div>
+              </div>
+              <div class="row__item item">
+                <div class="item__icon">
+                  <img src="img/feature-icon_03.png" alt="icon">
+                </div>
+                <div class="item__text">
+                  <div class="item__title">10+</div>
+                  <div class="item__subtitle">Entrance Courses</div>
+                </div>
+              </div>
+              <div class="row__item item">
+                <div class="item__icon">
+                  <img src="img/feature-icon_04.png" alt="icon">
+                </div>
+                <div class="item__text">
+                  <div class="item__title">100+</div>
+                  <div class="item__subtitle">Entrance Books</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="footer"></footer>
